--- a/src/components/WhatWeDo/WhatWeDo.css
+++ b/src/components/WhatWeDo/WhatWeDo.css
@@ -1,5 +1,5 @@
 .what-we-do-container {
-    margin: 50px auto;
+    margin: 20px auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -7,9 +7,47 @@
 }
 
 .what-we-do-left {
-    flex-basis: 40%;
+    flex-basis: 40%;    
+    margin-right: 30px;
+}
+
+.what-we-do-left > img {
+    width: 100%;
+    height: auto;
+    position: relative;
 }
 
 .what-we-do-right {
     flex-basis: 56%;
+}
+
+.weekly-meeting-container {
+    position: relative;
+    width: 200px;
+}
+
+.card-item-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-height: 100px;
+}
+
+.weekly-meeting-container h2 {
+    margin: 20px auto;
+    text-align: center;
+}
+
+.card-header {
+    width: 200px;
+    margin: auto 15px;
+    box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+    border-radius: 10px;
+    color: #676767;
+}
+
+.card-header > img {
+    width: 65px;
+    height: 80px;
+    border-radius: 50%;
 }
