--- a/client/src/components/AboutUs/AboutUs.css
+++ b/client/src/components/AboutUs/AboutUs.css
@@ -1,19 +1,26 @@
-.resources-container {
+.about-us-container {
     display: flex;
-    /* align-items: center;
-    justify-content: center; */
+}
+
+.what-we-are-right {
+    margin-bottom: 30px;
+}
+
+.card-container {
+    display: flex;
 }
 
 .card-header {
-    width: 200px;
-    margin: auto 15px;
+    width: 250px;
+    margin: auto 10px;
+    padding: 10px;
     box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
     border-radius: 10px;
     color: #676767;
 }
 
 .card-header > img {
-    width: 65px;
+    width: 80px;
     height: 80px;
     border-radius: 50%;
 }
