--- a/client/src/components/WhatWeDo/WhatWeDo.css
+++ b/client/src/components/WhatWeDo/WhatWeDo.css
@@ -22,18 +22,19 @@
 }
 
 .weekly-meeting-container {
-    position: relative;
-    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.card-item-container{
+/* .card-item-container{
     display: flex;
     align-items: center;
     justify-content: center;
     max-height: 100px;
-}
+} */
 
-.weekly-meeting-container h2 {
+/* .weekly-meeting-container h2 {
     margin: 20px auto;
     text-align: center;
 }
@@ -50,4 +51,4 @@
     width: 65px;
     height: 80px;
     border-radius: 50%;
-}
+} */
