--- a/client/src/components/Resources/Resources.css
+++ b/client/src/components/Resources/Resources.css
@@ -2,7 +2,7 @@
     display: flex;
 }
 
-.card-header {
+/* .card-header {
     width: 250px;
     margin: auto 10px;
     padding: 10px;
@@ -15,4 +15,4 @@
     width: 80px;
     height: 80px;
     border-radius: 50%;
-}
+} */
