--- a/client/src/components/WhatWeDo/WhatWeDo.css
+++ b/client/src/components/WhatWeDo/WhatWeDo.css
@@ -1,19 +1,21 @@
 .what-we-do-container {
-    margin: 20px auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 80%;
+    justify-content: center;
 }
 
 .what-we-do-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     flex-basis: 40%;    
     margin-right: 30px;
 }
 
 .what-we-do-left > img {
-    width: 100%;
-    height: auto;
+    height: 300px;
+    border-radius: 10px;
     position: relative;
 }
 
