--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -143,9 +143,9 @@
         width: 100%;
     }
 
-    .btn {
+    /* .btn {
         width: 100%;
-    }
+    } */
 
     .footer-link-wrapper {
         flex-direction: column;
