--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -93,3 +93,14 @@ a {
     width: 100%;
     height: 100%;
 }
+
+/* --- media queries --- */
+@media (max-width: 1200px) {
+    .container {
+        padding: 0 5%;
+    }
+
+    .btn {
+        padding: 12px 20px;
+    }
+}
