--- a/client/src/components/ContactUs/ContactUs.css
+++ b/client/src/components/ContactUs/ContactUs.css
@@ -8,7 +8,8 @@
 
 .contact-us-col {
     flex-basis: 48%;
-    color: #676767
+    color: #676767;
+    padding: 5px;    
 }
 
 .contact-us-col h3 {
@@ -37,4 +38,15 @@
     margin-top: 5px;
     margin-bottom: 15px;
     resize: none;
+}
+
+/* --------------------- media query ----------------------- */
+@media (max-width: 700px) {
+    .contact-us {
+        display: block;
+    }
+
+    .contact-us-col {
+        padding: 20px;
+    }
 }
