--- a/client/src/components/Hero/HeroSection.css
+++ b/client/src/components/Hero/HeroSection.css
@@ -78,7 +78,32 @@ video {
     margin-left: 4px;
 }
 
-@media screen and (max-width: 960px) {
+/* ----------------- media query ----------------- */
+@media (max-width: 850px) {
+    .hero-text h1 {
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 650px) {
+    .hero-text h1 {
+        font-size: 30px;
+        max-width: 200px;
+        margin: auto;
+    }
+
+    .hero-text {
+        font-size: 14px;
+        margin: 15px auto 30px;
+    }
+
+    .btn {
+        font-size: 12px;
+    }
+}
+
+
+/* @media screen and (max-width: 960px) {
     .hero-container > h1 {
         font-size: 70px;
         margin-top: -150px;
@@ -101,6 +126,6 @@ video {
     }
 
     .btn {
-        width: 100%;
+        width: 20%;
     }    
-}
+} */
