--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -37,6 +37,54 @@ nav ul li {
     transition: 0.5s;
 }
 
+.menu-icon {
+    display: none;
+}
+
+/* ----------------- media query -------------------- */
+@media (max-width: 1000px) {
+    /* .logo {
+        width: 140px;
+    } */
+
+    nav ul li {
+        margin: 10px 15px;
+    }
+}
+
+@media (max-width: 840px) {
+    nav {
+        padding: 15px 0;
+    }
+
+    nav ul {
+        position: fixed;
+        top: 0;
+        right: 0px;
+        bottom: 0;
+        background: #212EA0;
+        z-index: -1;
+        width: 200px;
+        padding-top: 70px;
+        transition: 0.5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 25px 40px;
+    }
+
+    .menu-icon {
+        display: block;
+        width: 30px;
+        cursor: pointer;
+    }
+
+    .hide-mobile-menu {
+        right: -200px;
+    }
+}
+
 /* .navbar {
     background: linear-gradient(90deg, rgba(184, 181, 181, 0.8) 0%, rgba(199, 197, 197, 0.8) 100%);
     height: 80px;
